--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build React App
         run: |
           version=$SHORT_SHA
-          path="${{ secrets.BUCKET_URL }}$version"
+          path="${{ secrets.BUCKET_URL }}/$version"
           REACT_APP_VERSION=$version PUBLIC_URL=$path npm run build
 
       - name: Install Wrangler
@@ -62,9 +62,9 @@ jobs:
 
       - name: Update Cloudflare KV
         run: |
-          path="${{ secrets.BUCKET_URL }}${{ steps.short-sha.outputs.sha }}/$MAIN_JS_PATH"
-          wrangler kv:key put --namespace-id=${{ secrets.BE_FE_NAMESPACE }} "90000" "${{ steps.short-sha.outputs.sha }}"
-          wrangler kv:key put --namespace-id=${{ secrets.FE_JS_NAMESPACE }} "${{ steps.short-sha.outputs.sha }}" $path
-          wrangler kv:key put --namespace-id=${{ secrets.FE_JS_NAMESPACE }} "latest" $path
+          path="${{ secrets.BUCKET_URL }}/$SHORT_SHA/$MAIN_JS_PATH"
+          wrangler kv:key put --namespace-id=${{ secrets.BE_FE_NAMESPACE }} "90000" "$SHORT_SHA"
+          wrangler kv:key put --namespace-id=${{ secrets.FE_JS_NAMESPACE }} "$SHORT_SHA" "$path"
+          wrangler kv:key put --namespace-id=${{ secrets.FE_JS_NAMESPACE }} "latest" "$path"
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_WORKERS_API_KEY }}
